[metadata]
name = py_accumulate
version = 0.0.2
author = Ratnesh Chandak
author_email = ratnesh.chandak@gmail.com
description = Python wrapper for accumulate API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ratnesh93/py_accumulate
project_urls =
    Bug Tracker = https://github.com/ratnesh93/py_accumulate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ACCUMULATE
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ACCUMULATE